# ansible-roles

./: COPYING  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.txt
.tests/: inventory.ini
ansible-local-cache/: README.md
apt-cacher-ng/: README  README.md
apt-dater-host/: README.md
apt-sources/: README.md
black/: README.md
borg/: README.md
borg-server/: README.md
builder/: README.md
cargo-edit/: README.md
cargo-watch/: README.md
cgit/: README.md
chrome/: README.md
chrony/: README.md
clog/: README.md
clogd/: README.md
common/: README.md
dbeaver/: README.md
direnv/: README.md
dnsmasq/: README.md
docker/: README.md
docker-compose/: README.md
download/: README.md
espanso/: README.md
fd/: README.md
firefox/: README.md
firejail/: README.md
flake8/: README.md
fstrim/: README.md
fzf/: README.md
git/: COPYING  README.md
gitolite/: README.md
go/: README.md
gocryptfs/: README.md
grub-config/: README.md
gtk-theme-greybird/: README.md
haproxy/: README.md
httpie/: README.md
hyperfine/: README.md
intel-undervolt/: README.md
ipython/: README.md
isort/: README.md
kexec/: README.md
libvirt/: README.md
lighttpd/: README.md
microcode/: README.md
mypy/: README.md
neovim/: README.md
nginx/: README.md
node/: README.md
nspawn-container/: README.md
nspawn-containers/: README.md
onefetch/: README.md
pgbouncer/: README.md
poetry/: README.md
postgresql/: README.md
pynvim/: README.md
python-app/: README.md
python-app-cli/: README.md
python-src/: README.md
(+589 files in other folders)
