[tool.poetry]
name = "ansible-roles"
version = "0.1.0"
description = "Ansible roles"
authors = ["Antonio Zanardo <zanardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
